apps/syncthing/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  labels:
    app.kubernetes.io/name: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
    spec:
      containers:
      - name: syncthing
        image: syncthing/syncthing:1.18
        volumeMounts:
        - name: data
          mountPath: /var/syncthing
      - name: caddy
        image: caddy:2.4.3
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /etc/caddy
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: syncthing-data
      - name: config
        configMap:
          name: syncthing-caddy-config
