apps/syncthing/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
spec:
  rules:
  - host: "ebooks.lab.tintinho.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: syncthing
            port:
              number: 80
